--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://example.org/"
+baseurl = "https://shippable.aerobatic.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "AeroShip"
